[gd_scene load_steps=32 format=2]

[ext_resource path="res://scenes/enemies/bosses/MaskedGoblin.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/menus/HeartUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/misc/MaskedGoblinLevel.gd" type="Script" id=3]
[ext_resource path="res://scenes/menus/LifeWineUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/menus/ManaPotUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/menus/DebugMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/menus/ManaUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/menus/HealthPotUI.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/menus/OpalsUI.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/items/Sign.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/misc/Light.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/menus/FPSCounter.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/menus/RevivementCrystalUI.tscn" type="PackedScene" id=14]
[ext_resource path="res://tilesets/one_way_tilesets.tres" type="TileSet" id=15]
[ext_resource path="res://tilesets/Default.tres" type="TileSet" id=16]
[ext_resource path="res://scenes/terrain/GenericSpike.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/menus/GameOver.tscn" type="PackedScene" id=18]
[ext_resource path="res://scenes/menus/SceneTransition.tscn" type="PackedScene" id=19]
[ext_resource path="res://assets/terrain/background_dungeons.png" type="Texture" id=20]
[ext_resource path="res://scenes/menus/CommonMonsterDustUI.tscn" type="PackedScene" id=21]
[ext_resource path="res://scenes/menus/PauseUI.tscn" type="PackedScene" id=22]
[ext_resource path="res://scenes/enemies/LimeSlime.tscn" type="PackedScene" id=23]
[ext_resource path="res://scenes/menus/GoblinScalesUI.tscn" type="PackedScene" id=24]
[ext_resource path="res://scenes/items/LevelTransporter.tscn" type="PackedScene" id=25]
[ext_resource path="res://assets/fonts/Born2bSportyV2.ttf" type="DynamicFontData" id=26]
[ext_resource path="res://assets/UI/popup_textbox_square.png" type="Texture" id=28]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 143.263, 9.42744 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 143.93, 9.42744 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 26 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 26 )

[node name="MaskedGoblinLevel" type="Node2D"]
script = ExtResource( 3 )

[node name="PauseUI" parent="." instance=ExtResource( 22 )]

[node name="HealthPotUI" parent="." instance=ExtResource( 8 )]

[node name="HeartUI" parent="." instance=ExtResource( 2 )]

[node name="ManaUI" parent="." instance=ExtResource( 7 )]

[node name="ManaPotUI" parent="." instance=ExtResource( 5 )]

[node name="LifeWineUI" parent="." instance=ExtResource( 4 )]

[node name="OpalsUI" parent="." instance=ExtResource( 9 )]

[node name="GoblinScalesUI" parent="." instance=ExtResource( 24 )]

[node name="CommonMonsterDustUI" parent="." instance=ExtResource( 21 )]

[node name="RevivementCrystal" parent="." instance=ExtResource( 14 )]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Background1" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
z_as_relative = false
motion_mirroring = Vector2( 1920, 640 )

[node name="TextureRect" type="ColorRect" parent="ParallaxBackground/Background1"]
margin_right = 1938.0
margin_bottom = 1355.0
color = Color( 0.113725, 0.145098, 0.113725, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Background1"]
scale = Vector2( 20, 20 )
texture = ExtResource( 20 )
centered = false
__meta__ = {
"_editor_description_": ""
}

[node name="GameOverUI" parent="." instance=ExtResource( 18 )]

[node name="SceneTransition" parent="." instance=ExtResource( 19 )]

[node name="DebugMenu" parent="." instance=ExtResource( 6 )]

[node name="FPSCounter" parent="." instance=ExtResource( 13 )]

[node name="TIleMap" type="TileMap" parent="."]
tile_set = ExtResource( 16 )
cell_size = Vector2( 96, 96 )
format = 1
tile_data = PoolIntArray( -327676, 0, 0, -327675, 0, 0, -327674, 0, 0, -327673, 0, 0, -327672, 0, 0, -327671, 0, 0, -196618, 0, 0, -196617, 0, 0, -196616, 0, 0, -196615, 0, 0, -196614, 0, 0, -196613, 0, 0, -196612, 0, 0, -196611, 0, 0, -196610, 0, 0, -196609, 0, 0, -262144, 0, 0, -262143, 0, 0, -262142, 0, 0, -262141, 0, 0, -262140, 0, 0, -262139, 0, 0, -262138, 0, 0, -262137, 0, 0, -262136, 0, 0, -262135, 0, 0, -262134, 0, 0, -131083, 6, 0, -131082, 6, 0, -131081, 8, 0, -131080, 8, 0, -131079, 8, 0, -131078, 8, 0, -131077, 8, 0, -131076, 8, 0, -131075, 8, 0, -131074, 8, 0, -131073, 8, 0, -196608, 8, 0, -196607, 8, 0, -196606, 8, 0, -196605, 8, 0, -196604, 8, 0, -196603, 8, 0, -196602, 8, 0, -196601, 8, 0, -196600, 8, 0, -196599, 8, 0, -196598, 6, 0, -196597, 6, 0, -65547, 6, 0, -65546, 6, 0, -65545, 9, 0, -65544, 9, 0, -65542, 4, 0, -65540, 12, 0, -65539, 9, 0, -65537, 4, 0, -131072, 12, 0, -131070, 9, 0, -131069, 9, 0, -131068, 12, 0, -131065, 9, 0, -131063, 9, 0, -131062, 6, 0, -131061, 6, 0, -11, 6, 0, -10, 6, 0, -9, 9, 0, -8, 9, 0, -6, 4, 0, -4, 13, 0, -3, 9, 0, -1, 4, 0, -65536, 13, 0, -65534, 9, 0, -65533, 9, 0, -65532, 13, 0, -65529, 9, 0, -65527, 9, 0, -65526, 6, 0, -65525, 6, 0, 65525, 6, 0, 65526, 6, 0, 65528, 9, 0, 65532, 13, 0, 65533, 9, 0, 0, 13, 0, 3, 9, 0, 4, 13, 0, 9, 9, 0, 10, 6, 0, 11, 6, 0, 131061, 6, 0, 131062, 6, 0, 131064, 4, 0, 131068, 14, 0, 65536, 13, 0, 65540, 14, 0, 65546, 6, 0, 65547, 6, 0, 196597, 6, 0, 196598, 6, 0, 196604, 14, 0, 131072, 13, 0, 131076, 14, 0, 131082, 6, 0, 131083, 6, 0, 262133, 6, 0, 262134, 6, 0, 262140, 13, 0, 196608, 13, 0, 196612, 13, 0, 196618, 6, 0, 196619, 6, 0, 327669, 6, 0, 327670, 6, 0, 327676, 13, 0, 262144, 13, 0, 262148, 13, 0, 262154, 6, 0, 262155, 6, 0, 393205, 6, 0, 393206, 6, 0, 393210, 10, 0, 393212, 14, 0, 393213, 11, 0, 393214, 5, 0, 327680, 14, 0, 327682, 5, 0, 327683, 10, 0, 327684, 14, 0, 327686, 11, 0, 327690, 6, 0, 327691, 6, 0, 458741, 6, 0, 458742, 6, 0, 458743, 7, 0, 458744, 7, 0, 458745, 7, 0, 458746, 7, 0, 458747, 7, 0, 458748, 7, 0, 458749, 7, 0, 458750, 7, 0, 458751, 7, 0, 393216, 7, 0, 393217, 7, 0, 393218, 7, 0, 393219, 7, 0, 393220, 7, 0, 393221, 7, 0, 393222, 7, 0, 393223, 7, 0, 393224, 7, 0, 393225, 7, 0, 393226, 6, 0, 393227, 6, 0, 524277, 6, 0, 524278, 6, 0, 524279, 6, 0, 524280, 6, 0, 524281, 6, 0, 524282, 6, 0, 524283, 6, 0, 524284, 6, 0, 524285, 6, 0, 524286, 6, 0, 524287, 6, 0, 458752, 6, 0, 458753, 6, 0, 458754, 6, 0, 458755, 6, 0, 458756, 6, 0, 458757, 6, 0, 458758, 6, 0, 458759, 6, 0, 458760, 6, 0, 458761, 6, 0, 458762, 6, 0, 458763, 6, 0, 589813, 6, 0, 589814, 6, 0, 589815, 6, 0, 589816, 6, 0, 589817, 6, 0, 589818, 6, 0, 589819, 6, 0, 589820, 6, 0, 589821, 6, 0, 589822, 6, 0, 589823, 6, 0, 524288, 6, 0, 524289, 6, 0, 524290, 6, 0, 524291, 6, 0, 524292, 6, 0, 524293, 6, 0, 524294, 6, 0, 524295, 6, 0, 524296, 6, 0, 524297, 6, 0, 524298, 6, 0, 524299, 6, 0, 655350, 0, 0, 655351, 0, 0, 655352, 0, 0, 655353, 0, 0, 655354, 0, 0, 655355, 0, 0, 655356, 0, 0, 655357, 0, 0, 655358, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 720886, 0, 0, 720887, 0, 0, 720888, 0, 0, 720889, 0, 0, 720890, 0, 0, 720891, 0, 0, 720892, 0, 0, 720893, 0, 0, 720894, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0 )

[node name="TileMap (One-way)" type="TileMap" parent="."]
tile_set = ExtResource( 15 )
cell_size = Vector2( 96, 96 )
format = 1
tile_data = PoolIntArray( 196603, 0, 0, 196604, 0, 0, 196605, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 262139, 0, 0, 262140, 0, 0, 262141, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 327671, 1, 0, 327672, 1, 0, 327673, 2, 0, 327675, 0, 0, 327676, 0, 0, 327677, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262151, 3, 0, 262152, 1, 0, 262153, 1, 0, 393211, 0, 0, 393212, 0, 0, 393213, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0 )

[node name="LevelTransporter" parent="." instance=ExtResource( 25 )]
visible = false
position = Vector2( 46.0346, 493.682 )

[node name="Player" parent="." instance=ExtResource( 11 )]
position = Vector2( -573.222, 498.141 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 41.4179, -100.638 )
current = true
zoom = Vector2( 1.2, 1.2 )
limit_left = -920
limit_top = -225
limit_right = 975
limit_bottom = 750
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.4
drag_margin_right = 0.4
editor_draw_limits = true

[node name="Light2D" parent="." instance=ExtResource( 12 )]
visible = false
position = Vector2( 42.8474, 55.0338 )
scale = Vector2( 39.0286, 28.2626 )
energy = 0.65
mode = 1

[node name="MaskedGoblin" parent="." instance=ExtResource( 1 )]
position = Vector2( 33.5742, 506.122 )

[node name="Sign" parent="." instance=ExtResource( 10 )]
visible = false
position = Vector2( -779.546, 149.502 )
Text = "The masked goblin has many tricks on its sleeve, including throwing ranged weapons and teleporting. Try to attack him from a range and use your sword to destroy his shurikens and gain more mana"

[node name="TelePos" type="Position2D" parent="."]
position = Vector2( 46.6818, 448 )

[node name="GenericSpike" parent="." instance=ExtResource( 17 )]
position = Vector2( -815.947, 528.935 )
rotation = 1.5708
position_name = "SpikePositionLeft"

[node name="GenericSpike2" parent="." instance=ExtResource( 17 )]
position = Vector2( -815.947, 433.935 )
rotation = 1.5708
position_name = "SpikePositionLeft"

[node name="GenericSpike3" parent="." instance=ExtResource( 17 )]
position = Vector2( -815.947, 338.935 )
rotation = 1.5708
position_name = "SpikePositionLeft"

[node name="GenericSpike4" parent="." instance=ExtResource( 17 )]
position = Vector2( -815.947, 242.935 )
rotation = 1.5708
position_name = "SpikePositionLeft"

[node name="GenericSpike5" parent="." instance=ExtResource( 17 )]
position = Vector2( 912.115, 528.523 )
rotation = 4.71239
position_name = "SpikePositionRight"

[node name="GenericSpike6" parent="." instance=ExtResource( 17 )]
position = Vector2( 912.115, 433.523 )
rotation = 4.71239
position_name = "SpikePositionRight"

[node name="GenericSpike7" parent="." instance=ExtResource( 17 )]
position = Vector2( 912.115, 338.523 )
rotation = 4.71239
position_name = "SpikePositionRight"

[node name="GenericSpike8" parent="." instance=ExtResource( 17 )]
position = Vector2( 912.115, 242.523 )
rotation = 4.71239
position_name = "SpikePositionRight"

[node name="SpikePositionLeft" type="Position2D" parent="."]
position = Vector2( -699.678, 510.4 )

[node name="SpikePositionRight" type="Position2D" parent="."]
position = Vector2( 786.444, 508.618 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -717.345, 394.7 )
shape = SubResource( 1 )
one_way_collision = true

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2( 1626.61, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( -811.15, 393.7 )
shape = SubResource( 1 )
one_way_collision = true

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2( 1626.61, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2( -1962.81, 202.347 )
shape = SubResource( 2 )

[node name="StaticBody2D4" type="StaticBody2D" parent="."]
position = Vector2( 1626.61, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D4"]
position = Vector2( -1195.19, 201.186 )
shape = SubResource( 2 )

[node name="LimeSlime" parent="." instance=ExtResource( 23 )]
position = Vector2( -333.081, 179.464 )

[node name="LimeSlime2" parent="." instance=ExtResource( 23 )]
position = Vector2( 433.599, 180.282 )

[node name="Plaque" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="Plaque"]
visible = false
anchor_left = 0.5
anchor_top = 0.33
anchor_right = 0.5
anchor_bottom = 0.33
margin_left = -540.0
margin_top = -237.6
margin_right = 534.0
margin_bottom = 484.4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Plaque/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -174.0
margin_right = 320.0
margin_bottom = 306.0
texture = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="RichTextLabel" parent="Plaque/Control/NinePatchRect"]
margin_left = 63.0
margin_top = 2.0
margin_right = 573.0
margin_bottom = 50.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "======= [color=#ff5e00]Boss Slain[/color] ======="
text = "======= Boss Slain ======="
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="Plaque/Control/NinePatchRect"]
margin_left = 105.0
margin_top = 62.0
margin_right = 538.0
margin_bottom = 111.0
custom_colors/default_color = Color( 0.219608, 0.960784, 0, 1 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "Masked Goblin Defeated"
text = "Masked Goblin Defeated"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="RichTextLabel" parent="Plaque/Control/NinePatchRect"]
margin_left = 151.163
margin_top = 122.245
margin_right = 492.163
margin_bottom = 171.245
custom_colors/default_color = Color( 1, 1, 0.0235294, 1 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "Time: 000 seconds"
text = "Time: 000 seconds"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 9999.0
autostart = true
